保護者面談ページのレスポンシブ対応

--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -138,6 +138,25 @@
     box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15);
 }
 
+.meeting-user {
+  position: relative;
+  background: #dbebc4;
+  box-shadow: 0px 0px 0px 5px #dbebc4;
+  border: dashed 2px white;
+  padding: 0.2em 0.5em;
+  color: #454545;
+}
+
+.meeting-user:after{
+    position: absolute;
+    content: '';
+    right: -7px;
+    top: -7px;
+    border-width: 0 15px 15px 0;
+    border-style: solid;
+    border-color: #dbebc4 #fff #dbebc4;
+    box-shadow: -1px 1px 1px rgba(0, 0, 0, 0.15);
+}
 
 
 /* 面談日時登録ページ */
@@ -309,6 +328,10 @@ td.ui-datepicker-week-end a.ui-state-highlight{
   cursor: pointer;
 }
 
+.not-time-select {
+  width: 300px;
+}
+
 
 /* 面談スケジュール調整ページ */
 
@@ -375,5 +398,14 @@ td.ui-datepicker-week-end a.ui-state-highlight{
     #meeting-title {
       font-size: 15px;
     }
+  }
+  #yoyaku-count {
+    font-size: 9px;
+  }
+  .not-time-select {
+    width: 170px;
+  }
+  .not-time-select, .select2-selection {
+    font-size: 10px;
   }
 }
