--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -41,7 +41,7 @@
     <div id="meeting-title"><i class="fas fa-edit"></i>面談時間の編集</div>
     <%= form_with(url: teacher_meetings_edit_path(@teacher), method: :patch, local:true) do |f| %>
     <div class="scroll-table">
-      <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%;">
+      <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; background-color: #ffffff;">
         <thead>
           <tr style="background: #FF9933; color: white;">
             <td>日付</td>
