--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -7,7 +7,7 @@
   <div id=content class="meeting-index">
     <%= form_with(url: teacher_schedule_update_path(@teacher), method: :patch, local:true) do |f| %>
       <div class="scroll-table">
-        <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; margin-top: 20px;">
+        <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; margin-top: 20px; background-color: #ffffff;">
           <thead>
             <tr style="background: #FF9933; color: white;">
               <td>日付</td>
