--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -59,8 +59,8 @@
             </td>
             <td>
               <div id="content-right">
-                <%= f.text_area :date, class: "form-control", id: "kouho", rows: "7",
-                    placeholder: "カレンダーの日付をクリックすると日時が入ります。", readonly: true %>
+                <%= f.text_area :date, class: "form-control fa", id: "kouho", rows: "7",
+                    placeholder: "\uf073 カレンダーの日付をクリックすると日時が入ります。", readonly: true %>
               </div>
             </td>
           </tr>
