--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -86,7 +86,7 @@
       <div id="submit-center">
         <%= f.submit "更新", class: "btn btn-success submit-edit" %>
         <%= form_with(url: push_path, local:true) do |f| %>
-          <%= f.submit "日時確定送信", data: {confirm: "LINEグループに通知しますがよろしいですか？"}, class: "btn btn-primary submit-edit", id: "line-btn" %>
+          <%= f.submit "日時確定送信", class: "btn btn-primary submit-edit", id: "line-btn" %>
         <% end %>
       </div>
     <% end %>
