--- a/app/assets/stylesheets/teachers.scss
+++ b/app/assets/stylesheets/teachers.scss
@@ -17,8 +17,8 @@
     }
   }
 }
-#meeting-top-title{
-  color: blue;
+.meeting-top-title{
+  color: #fff;
   font-size: 44px;
   font-weight: bold;
   letter-spacing: 10px;
@@ -53,27 +53,30 @@
 /* teacher-top*/
 .box_srcollbar {
   overflow:auto;
-  width:500px;
-  height:120px;
+  width:600px;
+  height:300px;
   padding:5px;
   border:1px solid #000;
-  background-color:#F9F9F9;
+  background-color:rgba(0, 0, 0, 0.4);
+  border-radius: 20px;
+  box-shadow: 2px 2px 4px 4px #000;
   color:#000;
   font-size:15px;
   margin: 0 auto;
-  margin-bottom: 3%;
+  margin-bottom: 4%;
   max-width:100%;
   font-family: 'M PLUS Rounded 1c';
 }
 
 .box_title{
-  border:1px solid #000;
   padding:5px;
-  width:500px;
+  width:600px;
   font-weight:bold;
   font-size:18px;
   font-family: 'M PLUS Rounded 1c';
-  background-color:#000;
+  border-bottom: 1px dotted #a0a0a0;
+  background-color:rgba(155, 135, 135, 0);
+  padding-bottom: 10px;
   color:#fff;
   text-align: center;
   margin: auto;
@@ -166,7 +169,7 @@
 /* スマートフォン対応 */
 
 @media screen and (max-width:767px){
-  #meeting-top-title{
+  .meeting-top-title{
     font-size: 28px;
   }
   #teacher-top{
@@ -178,6 +181,13 @@
 
       }
     }
+  }
+  .box_srcollbar{
+    height: 200px;
+  }
+  .box_title{
+    height: 50px;
+    
   }
   #teacher_bt{margin-bottom: 5%;height:45px;font-weight:bold;}
   .smart-cell {
@@ -194,6 +204,7 @@
   .teacher_menu_title{
     width: 100%;
     margin-left: 0;
+    margin-top: 10%;
     padding-left: 40%;
   }
 }
