--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,10 +1,11 @@
-<div id="meeting-top-title" class="title_font text-center">教員トップページ</div>
+<div id="meeting-top-title" class="title_font meeting-top-title">教員トップページ</div>
 
-<div class="box_title">保護者からのお問い合わせ</div>
+
 <div class="box_srcollbar">
+  <div class="box_title"><span style="color:#a0a0a0;"><i class="fas fa-phone">&emsp;</span></i>保護者からのお問い合わせ</div>
   <% @p_messages.each do |p_message| %>
-    <%= p_message.created_at.to_s(:date) %>
-    <%= link_to p_message.title, teacher_t_message_reply_path(@teacher, id: p_message.id) %>
+    <span style="color:yellow"><%= p_message.created_at.to_s(:date) %><span>
+    <span style="color:#fff;margin-left:5%;"><%= link_to p_message.title, teacher_t_message_reply_path(@teacher, id: p_message.id),style:"color:#fff" %></span>
     <%= "(返信済み)" if p_message.reply.present? %><br>
   <% end %>
 </div>
