--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -89,7 +89,7 @@
     <% end %>
     <div id="submit-center">
       <%= form_with(url: push_path, local:true) do |f| %>
-        <%= f.submit "日時確定送信", data: {confirm: "LINEグループに通知しますがよろしいですか？"}, class: "btn btn-primary submit-edit", id: "line-btn" %>
+        <%= f.submit "日時決定送信", data: {confirm: "LINEグループに通知しますがよろしいですか？"}, class: "btn btn-primary submit-edit", id: "line-btn" %>
       <% end %>
     </div>
   </div>
