--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -81,11 +81,13 @@
         <%= f.submit "更新", class: "btn btn-success submit-edit" %>
       </div>
     <% end %>
-    <div id="submit-center">
-      <%= form_with(url: push_path, local:true) do |f| %>
-        <%= f.submit "スケジュール決定送信", data: {confirm: "LINEグループに通知しますがよろしいですか？"}, class: "btn btn-primary submit-edit", id: "line-btn" %>
-      <% end %>
-    </div>
+    <%# if @children.count == @meeting_finish_count %> <!-- 全員決定時のみ表示 -->
+      <div id="submit-center">
+        <%= form_with(url: push_path, local:true) do |f| %>
+          <%= f.submit "スケジュール決定送信", data: {confirm: "LINEグループに通知しますがよろしいですか？"}, class: "btn btn-primary submit-edit", id: "line-btn" %>
+        <% end %>
+      </div>
+    <%# end %>
   </div>
 </div>
 
