--- a/app/views/users/messages.html.erb
+++ b/app/views/users/messages.html.erb
@@ -44,7 +44,7 @@
   <table class="table-bordered table-striped table-condensed meeting-table" style="width: 100%; margin-top: 20px;">
     <thead>
       <tr style="background: #FF9933; color: white;">
-        <td>返信日</td>
+        <td style="width: 30%;">返信日</td>
         <td>タイトル</td>
         <td>内容</td>
       </tr>
